fix overflow style in chart save template

--- a/src/charts/chartOptions.scss
+++ b/src/charts/chartOptions.scss
@@ -91,7 +91,7 @@
     }
     .chart-template-manager-root {
       max-height: 310px;
-      overflow: scroll;
+      overflow: hidden;
       .menu {
         button {
           background-color: #273051;
